--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="scss/style.css">
 </head>
 <body>
 <header class="header">
     <div class="wrapper">
-        <a href="#" class="logo">logo</a>
+        <a href="#" class="logo"><img src="img/logo.png" alt="Productly logo"></a>
         <nav class="header__navigation">
             <ul class="navigation">
                 <li><a href="#">Home</a></li>
@@ -255,7 +255,7 @@
 </section>
 <footer class="footer">
     <div class="wrapper">
-        <a href="#" class="logo">logo</a>
+        <a href="#" class="logo"><img src="img/logo.png" alt="Productly logo"></a>
         <div class="footer-navigation layout-3-col">
             <div class="footer-navigation__column">
                 <h4 class="footer-navigation__title">Quick Links</h4>
