--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
 <header class="header">
-    <div class="wrapper">
+    <div class="wrapper header__wrapper">
         <a href="#" class="logo"><img src="img/logo.png" alt="Productly logo"></a>
         <nav class="header__navigation">
             <ul class="navigation">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Product</a></li>
+                <li class="navigation__link"><a href="#">Home</a></li>
+                <li class="navigation__link"><a href="#">Services</a></li>
+                <li class="navigation__link"><a href="#">About</a></li>
+                <li class="navigation__link"><a href="#">Product</a></li>
             </ul>
         </nav>
         <div class="heaader__buttons">
