--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 </header>
 <section class="promo">
-    <div class="wrapper">
+    <div class="wrapper promo_wrapper">
         <div class="promo__content">
             <h1>The Design Thinking superpowers</h1>
             <p>
