--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <header class="header">
     <div class="wrapper header__wrapper">
-        <a href="#" class="logo"><img src="img/logo.png" alt="Productly logo"></a>
+        <object class="logo-object" data="img/logo.svg" type="image/svg+xml"></object>
         <nav class="header__navigation">
             <ul class="navigation">
                 <li class="navigation__link"><a href="#">Home</a></li>
@@ -21,7 +21,7 @@
                 <li class="navigation__link"><a href="#">Product</a></li>
             </ul>
         </nav>
-        <div class="heaader__buttons">
+        <div class="header__buttons">
             <button class="button button_bordered">Sign In</button>
             <button class="button button_colored">Sign Up</button>
         </div>
@@ -255,7 +255,7 @@
 </section>
 <footer class="footer">
     <div class="wrapper">
-        <a href="#" class="logo"><img src="img/logo.png" alt="Productly logo"></a>
+        <object class="logo-object" data="img/logo.svg" type="image/svg+xml"></object>
         <div class="footer-navigation layout-3-col">
             <div class="footer-navigation__column">
                 <h4 class="footer-navigation__title">Quick Links</h4>
