--- a/index.html
+++ b/index.html
@@ -49,39 +49,47 @@
     </div>
 </section>
 <section class="tools">
-    <div class="wrapper">
-        <h2>We design tools to unveil your superpowers</h2>
+    <div class="wrapper tools__wrapper">
+        <h2 class="tools__title">We design tools to unveil your superpowers</h2>
         <div class="layout-4-col">
             <div class="tool">
                 <div class="tool__icon">
-                    <span class="icon-square icon-square_lilium"></span>
+                    <span class="icon-square icon-square_violet">
+                        <span class="ico ico_arrow"></span>
+                    </span>
                 </div>
-                <h4>First click tests</h4>
-                <p>While most people enjoy casino gambling</p>
+                <h4 class="tool__tile">First click tests</h4>
+                <p class="tool__text">While most people enjoy casino gambling</p>
             </div>
             <div class="tool">
                 <div class="tool__icon">
-                    <span class="icon-square icon-square_yellow"></span>
+                    <span class="icon-square icon-square_yellow">
+                        <span class="ico ico_snake"></span>
+                    </span>
                 </div>
-                <h4>Design surveys</h4>
-                <p>Sports betting, lottery and bingo playing for the fun</p>
+                <h4 class="tool__tile">Design surveys</h4>
+                <p class="tool__text">Sports betting, lottery and bingo playing for the fun</p>
             </div>
             <div class="tool">
                 <div class="tool__icon">
-                    <span class="icon-square icon-square_red"></span>
+                    <span class="icon-square icon-square_red">
+                        <span class="ico ico_heart"></span>
+                    </span>
                 </div>
-                <h4>Preference tests</h4>
-                <p>The Myspace page defines the individual.</p>
+                <h4 class="tool__tile">Preference tests</h4>
+                <p class="tool__text">The Myspace page defines the individual.</p>
             </div>
             <div class="tool">
                 <div class="tool__icon">
-                    <span class="icon-square icon-square_blue"></span>
+                    <span class="icon-square icon-square_blue">
+                        <span class="ico ico_clock"></span>
+                    </span>
                 </div>
-                <h4>Five second tests</h4>
-                <p>Personal choices and the overall personality of the person.</p>
+                <h4 class="tool__tile">Five second tests</h4>
+                <p class="tool__text">Personal choices and the overall personality of the person.</p>
             </div>
         </div>
-        <div class="tools-button">
+        <div class="tools__button">
             <button class="button button_colored">Sign Up now</button>
         </div>
     </div>
