--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </section>
 <section class="strategies">
     <div class="wrapper">
-        <h2>Marketing Strategies</h2>
+        <h2 class="strategies__title">Marketing Strategies</h2>
         <p class="strategies__description">
             Join 40,000+ other marketers and get proven strategies on
             email marketing
@@ -107,8 +107,8 @@
             <span class="tag tag_bordered">Culture</span>
             <span class="tag tag_bordered">Design</span>
         </div>
-        <div class="layout-3-col">
-            <article class="strategy block_shadowed">
+        <div class="layout-3-col strategy-wrapper">
+            <article class="strategy block-shadowed">
                 <img class="strategy__image" src="./img/strategies/card_1.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
             </article>
-            <article class="strategy block_shadowed">
+            <article class="strategy block-shadowed">
                 <img class="strategy__image" src="./img/strategies/card_2.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Motivation Is The First Step To Success</h3>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </article>
-            <article class="strategy block_shadowed">
+            <article class="strategy block-shadowed">
                 <img class="strategy__image" src="./img/strategies/card_3.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Success Steps For Your Personal Or Business Life</h3>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
             </article>
-            <article class="strategy strategy_wide block_shadowed">
+            <article class="strategy strategy_wide block-shadowed">
                 <img class="strategy__image" src="./img/strategies/card_4.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Success Steps For Your Personal Or Business Life Plus Funny Image on the
@@ -150,7 +150,7 @@
                     </div>
                 </div>
             </article>
-            <article class="strategy block_shadowed">
+            <article class="strategy block-shadowed">
                 <img class="strategy__image" src="./img/strategies/card_5.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>
@@ -176,7 +176,7 @@
             making a purchase).
         </p>
         <div class="layout-3-col">
-            <div class="employee block_shadowed">
+            <div class="employee block-shadowed">
                 <div class="employee__content">
                     <h5>Kathy Rosenberg</h5>
                     <p class="employee__title">Product Mannager</p>
@@ -184,7 +184,7 @@
                 </div>
                 <img class="employee_photo" src="./img/employees/Kathy_Rosenberg.png" alt="Kathy Rosenberg">
             </div>
-            <div class="employee block_shadowed">
+            <div class="employee block-shadowed">
                 <div class="employee__content">
                     <h5>Alexandra Boyarskaya</h5>
                     <p class="employee__title">Support Marketing Specialist</p>
@@ -192,7 +192,7 @@
                 </div>
                 <img class="employee_photo" src="./img/employees/Alexandra_Boyarskaya.png" alt="Alexandra Boyarskaya">
             </div>
-            <div class="employee block_shadowed">
+            <div class="employee block-shadowed">
                 <div class="employee__content">
                     <h5>Melani Amini</h5>
                     <p class="employee__title">Photographer</p>
@@ -231,23 +231,12 @@
             <div class="contact-us__form">
                 <form action="" method="post">
                     <div class="layout-2-col">
-                        <input
-                                type="text"
-                                name="name"
-                                placeholder="Your name"
-                        />
-                        <input
-                                type="email"
-                                name="email"
-                                placeholder="Your email"
-                        />
+                        <label><input type="text" name="name" placeholder="Your name"/></label>
+                        <label><input type="email" name="email" placeholder="Your email"/></label>
                     </div>
-                    <textarea
-                            name="question"
-                            cols="30"
-                            rows="10"
-                            placeholder="What do you want to ask?"
-                    ></textarea>
+                    <label>
+                        <textarea name="question" cols="30" rows="10" placeholder="What do you want to ask?"></textarea>
+                    </label>
                     <div class="contact-us__button">
                         <button
                                 type="submit"
