feat: contact-us section styled

--- a/index.html
+++ b/index.html
@@ -230,20 +230,15 @@
             </div>
             <div class="contact-us__form">
                 <form action="" method="post">
-                    <div class="layout-2-col">
-                        <label><input type="text" name="name" placeholder="Your name"/></label>
-                        <label><input type="email" name="email" placeholder="Your email"/></label>
+                    <div class="layout-2-col contact-us__line">
+                        <input type="text" name="name" placeholder="Your name"/>
+                        <input type="email" name="email" placeholder="Your email"/>
                     </div>
                     <label>
-                        <textarea name="question" cols="30" rows="10" placeholder="What do you want to ask?"></textarea>
+                        <textarea class="contact-us__line" name="question" cols="30" rows="10" placeholder="What do you want to ask?"></textarea>
                     </label>
                     <div class="contact-us__button">
-                        <button
-                                type="submit"
-                                class="button button_colored"
-                        >
-                            Send
-                        </button>
+                        <button type="submit" class="button button_colored">Send</button>
                     </div>
                 </form>
             </div>
