--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
                         <input type="email" name="email" placeholder="Your email"/>
                     </div>
                     <label>
-                        <textarea class="contact-us__line" name="question" cols="30" rows="10" placeholder="What do you want to ask?"></textarea>
+                        <textarea class="contact-us__line" name="question" cols="30" rows="10"
+                                  placeholder="What do you want to ask?"></textarea>
                     </label>
                     <div class="contact-us__button">
                         <button type="submit" class="button button_colored">Send</button>
@@ -246,8 +247,10 @@
     </div>
 </section>
 <footer class="footer">
-    <div class="wrapper">
-        <object class="logo-object" data="img/logo.svg" type="image/svg+xml"></object>
+    <div class="wrapper footer__wrapper">
+        <a href="#" class="logo">
+            <object class="logo-object" data="img/logo.svg" type="image/svg+xml"></object>
+        </a>
         <div class="footer-navigation layout-3-col">
             <div class="footer-navigation__column">
                 <h4 class="footer-navigation__title">Quick Links</h4>
