--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 </section>
 <section class="about-us">
     <div class="wrapper">
-        <h2>About Us</h2>
-        <p>
+        <h2 class="about-us__title">About Us</h2>
+        <p class="about-us__description">
             Your About Us page is vital. It’s often the first stop in
             any user’s journey through a website or blog. It also
             shouldn’t be their last, because first impressions count
@@ -175,30 +175,30 @@
             conversion action (e.g., signing up for your newsletter,
             making a purchase).
         </p>
-        <div class="layout-3-col">
+        <div class="layout-3-col employee-container">
             <div class="employee block-shadowed">
                 <div class="employee__content">
-                    <h5>Kathy Rosenberg</h5>
+                    <h5 class="employee__name">Kathy Rosenberg</h5>
                     <p class="employee__title">Product Mannager</p>
                     <a class="employee__contact" href="mailto:kathyr@gmail.com">kathyr@gmail.com</a>
                 </div>
-                <img class="employee_photo" src="./img/employees/Kathy_Rosenberg.png" alt="Kathy Rosenberg">
+                <img class="employee__photo" src="./img/employees/Kathy_Rosenberg.png" alt="Kathy Rosenberg">
             </div>
             <div class="employee block-shadowed">
                 <div class="employee__content">
-                    <h5>Alexandra Boyarskaya</h5>
+                    <h5 class="employee__name">Alexandra Boyarskaya</h5>
                     <p class="employee__title">Support Marketing Specialist</p>
                     <a class="employee__contact" href="mailto:alexandrab@gmail.com">alexandrab@gmail.com</a>
                 </div>
-                <img class="employee_photo" src="./img/employees/Alexandra_Boyarskaya.png" alt="Alexandra Boyarskaya">
+                <img class="employee__photo" src="./img/employees/Alexandra_Boyarskaya.png" alt="Alexandra Boyarskaya">
             </div>
             <div class="employee block-shadowed">
                 <div class="employee__content">
-                    <h5>Melani Amini</h5>
+                    <h5 class="employee__name">Melani Amini</h5>
                     <p class="employee__title">Photographer</p>
                     <a class="employee__contact" href="mailto:melania@gmail.com">melania@gmail.com</a>
                 </div>
-                <img class="employee_photo" src="./img/employees/Melani_Amini.png" alt="Melani Amini">
+                <img class="employee__photo" src="./img/employees/Melani_Amini.png" alt="Melani Amini">
             </div>
         </div>
     </div>
