--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <body>
 <header class="header">
     <div class="wrapper header__wrapper">
-        <object class="logo-object" data="img/logo.svg" type="image/svg+xml"></object>
+        <div class="header__logo-line">
+            <span class="hamburger header__hamburger">
+                <span class="hamburger__line"></span>
+            </span>
+            <a href="#" class="logo">
+                <object class="logo-object" data="img/logo.svg" type="image/svg+xml"></object>
+            </a>
+        </div>
         <nav class="header__navigation">
             <ul class="navigation">
                 <li class="navigation__link"><a href="#">Home</a></li>
