--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             Join 40,000+ other marketers and get proven strategies on
             email marketing
         </p>
-        <div class="strategies__tags">
+        <div class="strategies__tags tags">
             <span class="tag tag_selected">All</span>
             <span class="tag tag_bordered">Art</span>
             <span class="tag tag_bordered">Culture</span>
@@ -119,7 +119,7 @@
                 <img class="strategy__image" src="./img/strategies/card_1.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>
-                    <div class="strategies__tags tags">
+                    <div class="strategy__tags tags">
                         <span class="tag tag_colored">Art</span>
                         <span class="tag tag_colored">Design</span>
                     </div>
@@ -129,7 +129,7 @@
                 <img class="strategy__image" src="./img/strategies/card_2.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Motivation Is The First Step To Success</h3>
-                    <div class="strategies__tags tags">
+                    <div class="strategy__tags tags">
                         <span class="tag tag_colored">Culture</span>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                 <img class="strategy__image" src="./img/strategies/card_3.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Success Steps For Your Personal Or Business Life</h3>
-                    <div class="strategies__tags tags">
+                    <div class="strategy__tags tags">
                         <span class="tag tag_colored">Culture</span>
                         <span class="tag tag_colored">Design</span>
                         <span class="tag tag_colored">Art</span>
@@ -150,7 +150,7 @@
                 <div class="strategy__content">
                     <h3 class="strategy__name">Success Steps For Your Personal Or Business Life Plus Funny Image on the
                         Back</h3>
-                    <div class="strategies__tags tags">
+                    <div class="strategy__tags tags">
                         <span class="tag tag_colored">Culture</span>
                         <span class="tag tag_colored">Design</span>
                         <span class="tag tag_colored">Art</span>
@@ -161,7 +161,7 @@
                 <img class="strategy__image" src="./img/strategies/card_5.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>
-                    <div class="strategies__tags tags">
+                    <div class="strategy__tags tags">
                         <span class="tag tag_colored">Design</span>
                     </div>
                 </div>
