--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 <section class="contact-us">
     <div class="wrapper">
         <h2 class="contact-us__title">Contact Us</h2>
-        <div class="layout-2-col">
+        <div class="layout-2-col contact-us-container">
             <div class="contact-us__content">
                 <p class="contact-us__text">
                     Your About Us page is vital. It’s often the first
