--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="scss/style.css">
+    <link rel="stylesheet" href="src/scss/style.css">
 </head>
 <body>
 <header class="header">
@@ -17,7 +17,7 @@
                 <span class="hamburger__line"></span>
             </span>
             <a href="#" class="logo">
-                <object class="logo-object" data="img/logo.svg" type="image/svg+xml"></object>
+                <object class="logo-object" data="src/img/logo.svg" type="image/svg+xml"></object>
             </a>
         </div>
         <nav class="header__navigation">
@@ -52,7 +52,7 @@
                 </a>
             </div>
         </div>
-        <img src="./img/promo/promo_image.png" class="promo__image" alt="The Design Thinking superpowers">
+        <img src="src/img/promo/promo_image.png" class="promo__image" alt="The Design Thinking superpowers">
     </div>
 </section>
 <section class="tools">
@@ -116,7 +116,7 @@
         </div>
         <div class="layout-3-col strategy-wrapper">
             <article class="strategy block-shadowed">
-                <img class="strategy__image" src="./img/strategies/card_1.jpeg" alt="strategy"/>
+                <img class="strategy__image" src="src/img/strategies/card_1.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>
                     <div class="strategy__tags tags">
@@ -126,7 +126,7 @@
                 </div>
             </article>
             <article class="strategy block-shadowed">
-                <img class="strategy__image" src="./img/strategies/card_2.jpeg" alt="strategy"/>
+                <img class="strategy__image" src="src/img/strategies/card_2.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Motivation Is The First Step To Success</h3>
                     <div class="strategy__tags tags">
@@ -135,7 +135,7 @@
                 </div>
             </article>
             <article class="strategy block-shadowed">
-                <img class="strategy__image" src="./img/strategies/card_3.jpeg" alt="strategy"/>
+                <img class="strategy__image" src="src/img/strategies/card_3.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Success Steps For Your Personal Or Business Life</h3>
                     <div class="strategy__tags tags">
@@ -146,7 +146,7 @@
                 </div>
             </article>
             <article class="strategy strategy_wide block-shadowed">
-                <img class="strategy__image" src="./img/strategies/card_4.jpeg" alt="strategy"/>
+                <img class="strategy__image" src="src/img/strategies/card_4.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Success Steps For Your Personal Or Business Life Plus Funny Image on the
                         Back</h3>
@@ -158,7 +158,7 @@
                 </div>
             </article>
             <article class="strategy block-shadowed">
-                <img class="strategy__image" src="./img/strategies/card_5.jpeg" alt="strategy"/>
+                <img class="strategy__image" src="src/img/strategies/card_5.jpeg" alt="strategy"/>
                 <div class="strategy__content">
                     <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>
                     <div class="strategy__tags tags">
@@ -189,7 +189,7 @@
                     <p class="employee__title">Product Mannager</p>
                     <a class="employee__contact" href="mailto:kathyr@gmail.com">kathyr@gmail.com</a>
                 </div>
-                <img class="employee__photo" src="./img/employees/Kathy_Rosenberg.png" alt="Kathy Rosenberg">
+                <img class="employee__photo" src="src/img/employees/Kathy_Rosenberg.png" alt="Kathy Rosenberg">
             </div>
             <div class="employee block-shadowed">
                 <div class="employee__content">
@@ -197,7 +197,7 @@
                     <p class="employee__title">Support Marketing Specialist</p>
                     <a class="employee__contact" href="mailto:alexandrab@gmail.com">alexandrab@gmail.com</a>
                 </div>
-                <img class="employee__photo" src="./img/employees/Alexandra_Boyarskaya.png" alt="Alexandra Boyarskaya">
+                <img class="employee__photo" src="src/img/employees/Alexandra_Boyarskaya.png" alt="Alexandra Boyarskaya">
             </div>
             <div class="employee block-shadowed">
                 <div class="employee__content">
@@ -205,7 +205,7 @@
                     <p class="employee__title">Photographer</p>
                     <a class="employee__contact" href="mailto:melania@gmail.com">melania@gmail.com</a>
                 </div>
-                <img class="employee__photo" src="./img/employees/Melani_Amini.png" alt="Melani Amini">
+                <img class="employee__photo" src="src/img/employees/Melani_Amini.png" alt="Melani Amini">
             </div>
         </div>
     </div>
@@ -256,7 +256,7 @@
 <footer class="footer">
     <div class="wrapper footer__wrapper">
         <a href="#" class="logo">
-            <object class="logo-object" data="img/logo.svg" type="image/svg+xml"></object>
+            <object class="logo-object" data="src/img/logo.svg" type="image/svg+xml"></object>
         </a>
         <div class="footer-navigation layout-3-col">
             <div class="footer-navigation__column">
@@ -289,5 +289,6 @@
         </div>
     </div>
 </footer>
+<script src="./src/index.js"></script>
 </body>
 </html>
