--- a/index.html
+++ b/index.html
@@ -115,57 +115,57 @@
             <span class="tag tag_bordered">Design</span>
         </div>
         <div class="layout-3-col strategy-wrapper">
-            <article class="strategy block-shadowed">
-                <img class="strategy__image" src="src/img/strategies/card_1.jpeg" alt="strategy"/>
-                <div class="strategy__content">
-                    <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>
-                    <div class="strategy__tags tags">
-                        <span class="tag tag_colored">Art</span>
-                        <span class="tag tag_colored">Design</span>
-                    </div>
-                </div>
-            </article>
-            <article class="strategy block-shadowed">
-                <img class="strategy__image" src="src/img/strategies/card_2.jpeg" alt="strategy"/>
-                <div class="strategy__content">
-                    <h3 class="strategy__name">Motivation Is The First Step To Success</h3>
-                    <div class="strategy__tags tags">
-                        <span class="tag tag_colored">Culture</span>
-                    </div>
-                </div>
-            </article>
-            <article class="strategy block-shadowed">
-                <img class="strategy__image" src="src/img/strategies/card_3.jpeg" alt="strategy"/>
-                <div class="strategy__content">
-                    <h3 class="strategy__name">Success Steps For Your Personal Or Business Life</h3>
-                    <div class="strategy__tags tags">
-                        <span class="tag tag_colored">Culture</span>
-                        <span class="tag tag_colored">Design</span>
-                        <span class="tag tag_colored">Art</span>
-                    </div>
-                </div>
-            </article>
-            <article class="strategy strategy_wide block-shadowed">
-                <img class="strategy__image" src="src/img/strategies/card_4.jpeg" alt="strategy"/>
-                <div class="strategy__content">
-                    <h3 class="strategy__name">Success Steps For Your Personal Or Business Life Plus Funny Image on the
-                        Back</h3>
-                    <div class="strategy__tags tags">
-                        <span class="tag tag_colored">Culture</span>
-                        <span class="tag tag_colored">Design</span>
-                        <span class="tag tag_colored">Art</span>
-                    </div>
-                </div>
-            </article>
-            <article class="strategy block-shadowed">
-                <img class="strategy__image" src="src/img/strategies/card_5.jpeg" alt="strategy"/>
-                <div class="strategy__content">
-                    <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>
-                    <div class="strategy__tags tags">
-                        <span class="tag tag_colored">Design</span>
-                    </div>
-                </div>
-            </article>
+<!--            <article class="strategy block-shadowed">-->
+<!--                <img class="strategy__image" src="src/img/strategies/card_1.jpeg" alt="strategy"/>-->
+<!--                <div class="strategy__content">-->
+<!--                    <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>-->
+<!--                    <div class="strategy__tags tags">-->
+<!--                        <span class="tag tag_colored">Art</span>-->
+<!--                        <span class="tag tag_colored">Design</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </article>-->
+<!--            <article class="strategy block-shadowed">-->
+<!--                <img class="strategy__image" src="src/img/strategies/card_2.jpeg" alt="strategy"/>-->
+<!--                <div class="strategy__content">-->
+<!--                    <h3 class="strategy__name">Motivation Is The First Step To Success</h3>-->
+<!--                    <div class="strategy__tags tags">-->
+<!--                        <span class="tag tag_colored">Culture</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </article>-->
+<!--            <article class="strategy block-shadowed">-->
+<!--                <img class="strategy__image" src="src/img/strategies/card_3.jpeg" alt="strategy"/>-->
+<!--                <div class="strategy__content">-->
+<!--                    <h3 class="strategy__name">Success Steps For Your Personal Or Business Life</h3>-->
+<!--                    <div class="strategy__tags tags">-->
+<!--                        <span class="tag tag_colored">Culture</span>-->
+<!--                        <span class="tag tag_colored">Design</span>-->
+<!--                        <span class="tag tag_colored">Art</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </article>-->
+<!--            <article class="strategy strategy_wide block-shadowed">-->
+<!--                <img class="strategy__image" src="src/img/strategies/card_4.jpeg" alt="strategy"/>-->
+<!--                <div class="strategy__content">-->
+<!--                    <h3 class="strategy__name">Success Steps For Your Personal Or Business Life Plus Funny Image on the-->
+<!--                        Back</h3>-->
+<!--                    <div class="strategy__tags tags">-->
+<!--                        <span class="tag tag_colored">Culture</span>-->
+<!--                        <span class="tag tag_colored">Design</span>-->
+<!--                        <span class="tag tag_colored">Art</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </article>-->
+<!--            <article class="strategy block-shadowed">-->
+<!--                <img class="strategy__image" src="src/img/strategies/card_5.jpeg" alt="strategy"/>-->
+<!--                <div class="strategy__content">-->
+<!--                    <h3 class="strategy__name">Increasing Prosperity With Positive Thinking</h3>-->
+<!--                    <div class="strategy__tags tags">-->
+<!--                        <span class="tag tag_colored">Design</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </article>-->
         </div>
     </div>
 </section>
@@ -289,6 +289,6 @@
         </div>
     </div>
 </footer>
-<script src="./src/index.js"></script>
+<script src="./dist/main.js"></script>
 </body>
 </html>
